--- a/docwizGitbot/package.json
+++ b/docwizGitbot/package.json
@@ -16,6 +16,7 @@
     "test": "node --test"
   },
   "dependencies": {
+    "openai": "^4.73.1",
     "probot": "^13.0.1"
   },
   "devDependencies": {
@@ -24,6 +25,5 @@
   },
   "engines": {
     "node": ">= 18"
-  },
-  "type": "module"
+  }
 }
